samples/_failures_safe/1761174347_32b130_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdb941be.c: In function ‘main’:
./samples/SAFE/__tmp_fdb941be.c:187:9: error: expected declaration or statement at end of input
  187 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_fdb941be.c:187:9: error: expected declaration or statement at end of input
